Adding data sources for real data modelling

--- a/Building Data Model and Writing ETL Job/.env
+++ b/Building Data Model and Writing ETL Job/.env
@@ -2,4 +2,5 @@ DB_HOST=localhost
 DB_NAME=raw_inventory
 DB_USER=postgres
 DB_PASS=postgres
+FILE_PATH='C:/Users/angel/Desktop/DE PROJECTS/Professional-Portfolio/Building Data Model and Writing ETL Job/data'
 
